--- a/top/index.html
+++ b/top/index.html
@@ -51,6 +51,10 @@
                 display: inline;
             }
 
+            .reverse-flex {
+                flex-direction: column-reverse;
+            }
+
         }
     </style>
     <!-- Custom styles for this template -->
@@ -183,57 +187,75 @@
             <h2 class="mb-80">Valeだからできること。</h2>
             <div class="container">
 
-                <h3>退職しただけでは先に進めないことを我々は知っています。</h3>
-                <div class="row row-content mb-10">
+                <h3>我々は知っています。</h3>
+                <div class="row row-content mb-10 reverse-flex">
                     <div class="col-md-6">
-                        <p class="lead text-muted">退職後のお客様のサポートをさせていただいております。</p>
                         <p class="lead text-muted">これまでとは違う業界や、お客様の個性、性格にあった活躍できる業界や職種をご提案いたします。</p>
                     </div>
                     <div class="col-md-6">
-                        <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail">
-                        <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
+                        <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
+                            xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false"
+                            role="img" aria-label="Placeholder: Thumbnail">
+                            <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
+                                dy=".3em">Thumbnail</text>
+                        </svg>
                     </div>
                 </div>
 
                 <h3>シンプルにスピーディーに。</h3>
                 <div class="row row-content mb-10">
                     <div class="col-md-6">
-                        <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail">
-                        <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
+                        <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
+                            xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false"
+                            role="img" aria-label="Placeholder: Thumbnail">
+                            <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
+                                dy=".3em">Thumbnail</text>
+                        </svg>
                     </div>
                     <div class="col-md-6">
                         <p class="lead text-muted">退職まで3ステップで完了いたします。</p>
                     </div>
                 </div>
 
-                <h3>退職しただけでは先に進めないことを我々は知っています。</h3>
-                <div class="row row-content mb-10">
+                <h3>我々は知っています。</h3>
+                <div class="row row-content mb-10 reverse-flex">
                     <div class="col-md-6">
-                        <p class="lead text-muted">退職後のお客様のサポートをさせていただいております。</p>
                         <p class="lead text-muted">これまでとは違う業界や、お客様の個性、性格にあった活躍できる業界や職種をご提案いたします。</p>
                     </div>
                     <div class="col-md-6">
-                        <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail">
-                        <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
+                        <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
+                            xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false"
+                            role="img" aria-label="Placeholder: Thumbnail">
+                            <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
+                                dy=".3em">Thumbnail</text>
+                        </svg>
                     </div>
                 </div>
 
                 <h3>プライバシー</h3>
                 <div class="row row-content mb-10">
                     <div class="col-md-6">
-                        <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail">
-                        <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
+                        <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
+                            xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false"
+                            role="img" aria-label="Placeholder: Thumbnail">
+                            <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
+                                dy=".3em">Thumbnail</text>
+                        </svg>
                     </div>
                     <div class="col-md-6">
-                        <p class="lead text-muted">Valeではプライバシーは基本的人権と考えます。Valeではお客様との契約関係終了後の一定の保存期間を過ぎた場合お客様の情報を削除します。</p>
+                        <p class="lead text-muted">Valeではプライバシーは基本的人権と考えます。Valeではお客様との契約関係終了後の一定の保存期間を過ぎた場合お客様の情報を削除します。
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
         <div class="album py-5 bg-light">
-            <div class="text-center">
-                <h2>あなたらしく。</h2>
+            <div class="">
+                <h2 class="text-center">あなたらしく。</h2>
+                <div class="center container-sm">
+                </div>
             </div>
+        </div>
         </div>
         <div class="jumbotron album py-5">
             <div class="container">
