--- a/top/index.html
+++ b/top/index.html
@@ -14,7 +14,7 @@
     <!-- Bootstrap core CSS -->
     <link href="../css/bootstrap-4.5.0-dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script type="text/javascript" src="../js/jquery.textillate.js"></script>
     <script type="text/javascript" src="../js/jquery.lettering.js"></script>
     <script type="text/javascript" src="../js/textAnime.js"></script>
