--- a/top/index.html
+++ b/top/index.html
@@ -224,7 +224,7 @@
                                 これまでとは違う業界や、お客様の個性、性格にあった活躍できる業界や職種をご提案いたします。</p>
                         </div>
                         <div class="col-md-6">
-                            <svg class="bd-placeholder-img card-img-top layer" width="100%" height="225"
+                            <svg class="bd-placeholder-img card-img-top layer contents-card-img"
                                 xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice"
                                 focusable="false" role="img" aria-label="Placeholder: Thumbnail">
                                 <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
@@ -239,32 +239,32 @@
                     <h3 class="sm">シンプルに、<br>スピーディーに。</h3>
                     <div class="row row-content mb-10">
                         <div class="col-md-6">
-                            <svg class="bd-placeholder-img card-img-top mb-1 item1" width="100%" height="40"
-                                xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice"
+                            <svg class="bd-placeholder-img card-img-top mb-1 item1 contents-card-img2" width="100%"
+                                height="40" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice"
                                 focusable="false" role="img" aria-label="Placeholder: Thumbnail">
                                 <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
                                     dy=".3em">相談</text>
                             </svg>
-                            <svg class="bd-placeholder-img card-img-top mb-1 item1" width="100%" height="40"
-                                xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice"
+                            <svg class="bd-placeholder-img card-img-top mb-1 item1 contents-card-img2" width="100%"
+                                height="40" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice"
                                 focusable="false" role="img" aria-label="Placeholder: Thumbnail">
                                 <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
                                     dy=".3em">矢印</text>
                             </svg>
-                            <svg class="bd-placeholder-img card-img-top mb-1 item2" width="100%" height="40"
-                                xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice"
+                            <svg class="bd-placeholder-img card-img-top mb-1 item2 contents-card-img2" width="100%"
+                                height="40" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice"
                                 focusable="false" role="img" aria-label="Placeholder: Thumbnail">
                                 <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
                                     dy=".3em">振込</text>
                             </svg>
-                            <svg class="bd-placeholder-img card-img-top mb-1 item2" width="100%" height="40"
-                                xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice"
+                            <svg class="bd-placeholder-img card-img-top mb-1 item2 contents-card-img2" width="100%"
+                                height="40" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice"
                                 focusable="false" role="img" aria-label="Placeholder: Thumbnail">
                                 <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
                                     dy=".3em">矢印</text>
                             </svg>
-                            <svg class="bd-placeholder-img card-img-top mb-1 item3" width="100%" height="40"
-                                xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice"
+                            <svg class="bd-placeholder-img card-img-top mb-1 item3 contents-card-img2" width="100%"
+                                height="40" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice"
                                 focusable="false" role="img" aria-label="Placeholder: Thumbnail">
                                 <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
                                     dy=".3em">実行</text>
@@ -285,7 +285,7 @@
                             </p>
                         </div>
                         <div class="col-md-6">
-                            <svg class="bd-placeholder-img card-img-top hop-img" width="100%" height="225"
+                            <svg class="bd-placeholder-img card-img-top hop-img contents-card-img"
                                 xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice"
                                 focusable="false" role="img" aria-label="Placeholder: Thumbnail">
                                 <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
@@ -299,7 +299,7 @@
                     <h3>24時間。365日。</h3>
                     <div class="row row-content mb-10">
                         <div class="col-md-6">
-                            <svg class="bd-placeholder-img card-img-top hop-img" width="100%" height="225"
+                            <svg class="bd-placeholder-img card-img-top hop-img contents-card-img"
                                 xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice"
                                 focusable="false" role="img" aria-label="Placeholder: Thumbnail">
                                 <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
@@ -320,7 +320,7 @@
                                 お客様の状況にもよりますが、雇用保険を受け取れるケースがあります。私たちは退職後の保険のサポートもいたします。</p>
                         </div>
                         <div class="col-md-6">
-                            <svg class="bd-placeholder-img card-img-top hop-img" width="100%" height="225"
+                            <svg class="bd-placeholder-img card-img-top hop-img contents-card-img"
                                 xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice"
                                 focusable="false" role="img" aria-label="Placeholder: Thumbnail">
                                 <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
@@ -334,7 +334,7 @@
                     <h3>プライバシー</h3>
                     <div class="row row-content mb-10">
                         <div class="col-md-6">
-                            <svg class="bd-placeholder-img card-img-top hop-img" width="100%" height="225"
+                            <svg class="bd-placeholder-img card-img-top hop-img contents-card-img"
                                 xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice"
                                 focusable="false" role="img" aria-label="Placeholder: Thumbnail">
                                 <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
@@ -362,25 +362,20 @@
                                 </p>
                             </div>
                             <div class="col-md-6">
-                                <article class="lead text-muted example-left" id="customerValu1">
-                                    <marquee behavior="scroll" direction="left">
-                                        お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声</marquee>
+                                <article class="lead text-muted" id="customerValu1">
+                                    お客様の声
                                 </article>
-                                <article class="lead text-muted example-left" id="customerValu2">
-                                    <marquee behavior="scroll" direction="left">
-                                        お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声</marquee>
+                                <article class="lead text-muted" id="customerValu2">
+                                    お客様の声
                                 </article>
-                                <article class="lead text-muted example-left" id="customerValu3">
-                                    <marquee behavior="scroll" direction="left">
-                                        お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声</marquee>
+                                <article class="lead text-muted" id="customerValu3">
+                                    お客様の声
                                 </article>
-                                <article class="lead text-muted example-left" id="customerValu4">
-                                    <marquee behavior="scroll" direction="left">
-                                        お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声</marquee>
+                                <article class="lead text-muted" id="customerValu4">
+                                    お客様の声
                                 </article>
-                                <article class="lead text-muted example-left" id="customerValu5">
-                                    <marquee behavior="scroll" direction="left">
-                                        お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声お客様の声</marquee>
+                                <article class="lead text-muted" id="customerValu5">
+                                    お客様の声
                                 </article>
                             </div>
                         </div>
