文章など修正

--- a/top/index.html
+++ b/top/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="ja">
 
 <head>
     <meta charset="utf-8">
@@ -121,7 +121,7 @@
 
                 <div class="h1-text h1-title-1 sm-top"> 言いづらい。</div>
                 <div class="h1-text h1-title-1"> 変えたい。</div>
-                <div class="h1-text h1-title-2">それをカタチに</div>
+                <div class="h1-text h1-title-2">将来をカタチに</div>
 
                 <p class="text-muted text-in-1">Valeはあなたの退職を代行します。</p>
                 <p class="text-muted text-in-2">一人で悩まずその先へ</p>
@@ -153,7 +153,7 @@
         <div class="album bg-light">
             <div class="container">
                 <div class="text-center animateslow">
-                    <h2 class="text-left">Valeが提供する、<br>あなたにぴったりの<br>やめ方を見つけよう。</h2>
+                    <h2 class="text-left">Valeが提供する、<br>あなたにぴったりの<br>カタチを見つけよう。</h2>
                 </div>
                 <div class="row">
                     <div class="col-md-4" id="priceCard1">
