--- a/top/index.html
+++ b/top/index.html
@@ -224,12 +224,15 @@
                                 これまでとは違う業界や、お客様の個性、性格にあった活躍できる業界や職種をご提案いたします。</p>
                         </div>
                         <div class="col-md-6">
-                            <svg class="bd-placeholder-img card-img-top layer contents-card-img"
+                            <!-- <svg class="bd-placeholder-img card-img-top layer contents-card-img"
                                 xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice"
                                 focusable="false" role="img" aria-label="Placeholder: Thumbnail">
                                 <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
                                     dy=".3em">我々は知っている</text>
-                            </svg>
+                            </svg> -->
+                            <img src="img/busines.png" alt="我々は知っている" class="bd-placeholder-img card-img-top layer contents-card-img">
+                            <img src="img/work-5382501_1280.jpg" alt="我々は知っている" class="bd-placeholder-img card-img-top layer contents-card-img">
+
                         </div>
                     </div>
                 </div>
@@ -285,12 +288,13 @@
                             </p>
                         </div>
                         <div class="col-md-6">
-                            <svg class="bd-placeholder-img card-img-top hop-img contents-card-img"
+                            <!-- <svg class="bd-placeholder-img card-img-top hop-img contents-card-img"
                                 xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice"
                                 focusable="false" role="img" aria-label="Placeholder: Thumbnail">
                                 <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
                                     dy=".3em">返金</text>
-                            </svg>
+                            </svg> -->
+                            <img src="img/hert.png" alt="返金保証" class="bd-placeholder-img card-img-top hop-img contents-card-img">
                         </div>
                     </div>
                 </div>
@@ -299,12 +303,13 @@
                     <h3>24時間。365日。</h3>
                     <div class="row row-content mb-10">
                         <div class="col-md-6">
-                            <svg class="bd-placeholder-img card-img-top hop-img contents-card-img"
+                            <!-- <svg class="bd-placeholder-img card-img-top hop-img contents-card-img"
                                 xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice"
                                 focusable="false" role="img" aria-label="Placeholder: Thumbnail">
                                 <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
                                     dy=".3em">24h365d</text>
-                            </svg>
+                            </svg> -->
+                            <img src="img/24H365D.png" alt="365D24H"" class="bd-placeholder-img card-img-top hop-img contents-card-img">
                         </div>
                         <div class="col-md-6">
                             <p class="lead text-muted text-left container-contents-text">Valeはお客様のご要望に沿って対応いたします。</p>
@@ -320,12 +325,14 @@
                                 お客様の状況にもよりますが、雇用保険を受け取れるケースがあります。私たちは退職後の保険のサポートもいたします。</p>
                         </div>
                         <div class="col-md-6">
-                            <svg class="bd-placeholder-img card-img-top hop-img contents-card-img"
+                            <!-- <svg class="bd-placeholder-img card-img-top hop-img contents-card-img"
                                 xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice"
                                 focusable="false" role="img" aria-label="Placeholder: Thumbnail">
                                 <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
                                     dy=".3em">制度</text>
-                            </svg>
+                            </svg> -->
+                            <img src="img/45608.png" alt="雇用保険"" class="bd-placeholder-img card-img-top hop-img contents-card-img">
+
                         </div>
                     </div>
                 </div>
@@ -334,12 +341,13 @@
                     <h3>プライバシー</h3>
                     <div class="row row-content mb-10">
                         <div class="col-md-6">
-                            <svg class="bd-placeholder-img card-img-top hop-img contents-card-img"
+                            <!-- <svg class="bd-placeholder-img card-img-top hop-img contents-card-img"
                                 xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice"
                                 focusable="false" role="img" aria-label="Placeholder: Thumbnail">
                                 <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
                                     dy=".3em">プライバシー</text>
-                            </svg>
+                            </svg> -->
+                            <img src="img/key.png" alt="プライバシー"" class="bd-placeholder-img card-img-top hop-img contents-card-img">
                         </div>
                         <div class="col-md-6">
                             <p class="lead text-muted blurred text-left container-contents-text">
